[gd_scene load_steps=9 format=2]

[ext_resource path="res://Ui/DeathScreen/DeathScreen.gd" type="Script" id=1]
[ext_resource path="res://Ui/ButtonTexture/YouDied.png" type="Texture" id=2]
[ext_resource path="res://Ui/ButtonTexture/YouDied-Hover.png" type="Texture" id=3]
[ext_resource path="res://Ui/ButtonTexture/NewGame.png" type="Texture" id=4]
[ext_resource path="res://Ui/ButtonTexture/NewGame-Hover.png" type="Texture" id=5]
[ext_resource path="res://Ui/ButtonTexture/Exit-Hover.png" type="Texture" id=6]
[ext_resource path="res://Ui/ButtonTexture/Exit.png" type="Texture" id=7]
[ext_resource path="res://Ui/HighscoreWindow/Highscore Window.tscn" type="PackedScene" id=8]

[node name="DeathScreen" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YouDied" type="TextureButton" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -398.798
margin_top = -252.398
margin_right = -0.798248
margin_bottom = -139.398
rect_pivot_offset = Vector2( -368.319, -75.0254 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="TextureButton" parent="YouDied"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -107.0
margin_top = 57.0
margin_right = 107.0
margin_bottom = 135.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="YouDied"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.5
margin_top = 78.0
margin_right = 55.5
margin_bottom = 155.0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add_score" type="TextureButton" parent="YouDied"]
visible = false
margin_left = 420.775
margin_top = 258.0
margin_right = 617.775
margin_bottom = 307.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Currnet" type="Label" parent="YouDied/Add_score"]
margin_left = 5.04834
margin_top = -129.611
margin_right = 100.048
margin_bottom = -115.611
rect_scale = Vector2( 2, 2 )
text = "Current: 42069"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="YouDied/Add_score"]
margin_left = 10.0483
margin_top = -97.611
margin_right = 105.048
margin_bottom = -83.611
rect_scale = Vector2( 2, 2 )
text = "Add name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="YouDied/Add_score"]
margin_left = 10.0484
margin_top = -61.611
margin_right = 192.048
margin_bottom = -21.611
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScores" parent="." instance=ExtResource( 8 )]
margin_left = 749.961
margin_top = 150.627
margin_right = 749.961
margin_bottom = 150.627

[connection signal="pressed" from="YouDied/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="YouDied/Exit" to="." method="_on_Exit_pressed"]
